--- a/test/fixtures/customers.yml
+++ b/test/fixtures/customers.yml
@@ -1,13 +1,13 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  cus_ID: MyString
+  code: MyString
   name: MyString
   address: MyString
-  phone_number: 1
+  phone: 1
 
 two:
-  cus_ID: MyString
+  code: MyString
   name: MyString
   address: MyString
-  phone_number: 1
+  phone: 1
